Migrate sleep detail to React
